--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "express": "^4.18.2",
+    "kafkajs": "^2.2.4",
     "nodemon": "^3.0.1",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
