--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.6.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4",
     "nodemon": "^3.0.1",
